[gd_scene load_steps=20 format=2]

[ext_resource path="res://Assets/player.png" type="Texture" id=1]
[ext_resource path="res://Player/Player.gd" type="Script" id=2]

[sub_resource type="CapsuleShape2D" id=1]
radius = 4.65289
height = 2.18758

[sub_resource type="AnimationNodeAnimation" id=2]
animation = "run right"

[sub_resource type="AnimationNodeAnimation" id=3]
animation = "run left"

[sub_resource type="AnimationNodeAnimation" id=4]
animation = "idle"

[sub_resource type="AnimationNodeAnimation" id=5]
animation = "jump"

[sub_resource type="AnimationNodeAnimation" id=6]
animation = "fall"

[sub_resource type="AnimationNodeBlendSpace2D" id=7]
blend_point_0/node = SubResource( 2 )
blend_point_0/pos = Vector2( 1, 0 )
blend_point_1/node = SubResource( 3 )
blend_point_1/pos = Vector2( -1, 0 )
blend_point_2/node = SubResource( 4 )
blend_point_2/pos = Vector2( 0, 0 )
blend_point_3/node = SubResource( 5 )
blend_point_3/pos = Vector2( 0, -1 )
blend_point_4/node = SubResource( 6 )
blend_point_4/pos = Vector2( 0, 1 )
blend_mode = 1

[sub_resource type="AnimationNodeStateMachine" id=8]
states/Movement/node = SubResource( 7 )
states/Movement/position = Vector2( 314, 50 )
start_node = "Movement"

[sub_resource type="AnimationNodeStateMachinePlayback" id=9]

[sub_resource type="Animation" id=10]
resource_name = "fall"
length = 0.1
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 4 ]
}

[sub_resource type="Animation" id=11]
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 0 ]
}

[sub_resource type="Animation" id=12]
length = 0.1
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}

[sub_resource type="Animation" id=13]
length = 0.1
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 3 ]
}

[sub_resource type="Animation" id=14]
length = 0.1
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 2 ]
}

[sub_resource type="CapsuleShape2D" id=15]
radius = 3.72814
height = 4.57004

[sub_resource type="CapsuleShape2D" id=16]
radius = 5.24366
height = 1.72345

[sub_resource type="RectangleShape2D" id=17]
extents = Vector2( 3.29106, 1.93716 )

[node name="Player" type="KinematicBody2D"]
scale = Vector2( 4, 4 )
collision_layer = 2
collision_mask = 15
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )
hframes = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 2.31757 )
shape = SubResource( 1 )

[node name="RayCast2D" type="RayCast2D" parent="."]
scale = Vector2( 1, 0.25 )
enabled = true

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource( 8 )
anim_player = NodePath("../AnimationPlayer")
active = true
parameters/playback = SubResource( 9 )
parameters/Movement/blend_position = Vector2( 0, 0 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/fall = SubResource( 10 )
anims/idle = SubResource( 11 )
anims/jump = SubResource( 12 )
"anims/run left" = SubResource( 13 )
"anims/run right" = SubResource( 14 )

[node name="HitRotation" type="Position2D" parent="."]
position = Vector2( 0, 2.629 )

[node name="Hitbox" type="Area2D" parent="HitRotation"]
monitoring = false
monitorable = false
collision_layer = 0
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitRotation/Hitbox"]
position = Vector2( 7.789, 0 )
shape = SubResource( 15 )

[node name="Hurtbox" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hurtbox"]
position = Vector2( 0, 2 )
shape = SubResource( 16 )

[node name="DashTimer" type="Timer" parent="."]
one_shot = true

[node name="AttackTimer" type="Timer" parent="."]
one_shot = true

[node name="TopCheck" type="Area2D" parent="."]
monitorable = false
collision_layer = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="TopCheck"]
position = Vector2( 0, -3.07559 )
shape = SubResource( 17 )

[connection signal="timeout" from="DashTimer" to="." method="_on_DashTimer_timeout"]
[connection signal="body_entered" from="TopCheck" to="." method="_on_TopCheck_body_entered"]
